docs : swagger 문서 수정
